fixed spacing on blue bar

--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,7 @@ a:focus {
 
 #blue {
 	background: #00b3fe;
-	margin-top: 60px;
+	margin-top: 0px;
 	margin-bottom: 0px;
 	padding-top: 25px;
 	padding-bottom: 25px;
